force-app/main/default/objects/Colony__c/Colony__c.object-meta.xml
<CustomObject>
    <label>Colony</label>
    <pluralLabel>Colonys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Colony Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>