force-app/main/default/objects/Colony__c/fields/Invest__c.field-meta.xml
<CustomField>
    <fullName>Invest__c</fullName>
    <label>Invest</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>