force-app/main/default/objects/Colony__c/fields/Points__c.field-meta.xml
<CustomField>
    <fullName>Points__c</fullName>
    <label>Points</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>