force-app/main/default/objects/Colony__c/fields/Tag__c.field-meta.xml
<CustomField>
    <fullName>Tag__c</fullName>
    <label>Tag</label>
    <type>Text</type>
    <length>255</length>
</CustomField>